--- a/data/_Season02.json
+++ b/data/_Season02.json
@@ -2,6 +2,7 @@
     "$schema": "./schema/season.json",
     "title": "Season 2",
     "recordings": [
-        "S02/S02E06-J1.json"
+        "S02/S02E06-J1.json",
+        "S02/S02E07-J1.json"
     ]
 }
