--- a/data/_Season02.json
+++ b/data/_Season02.json
@@ -6,6 +6,8 @@
         "S02/S02E03-J1T1.json",
         "S02/S02E03-J1T2.json",
         "S02/S02E03-J1T3.json",
+        "S02/S02E03-J2T0.json",
+        "S02/S02E03-J2T1.json",
         "S02/S02E06-J1.json",
         "S02/S02E07-J1.json",
         "S02/S02E07-J2.json",
