A bunch of new data files for season 2

--- a/data/_Season02.json
+++ b/data/_Season02.json
@@ -2,12 +2,23 @@
     "$schema": "./schema/season.json",
     "title": "Season 2",
     "recordings": [
+        "S02/S02E02-J1.json",
+        "S02/S02E02-J2.json",
+        "S02/S02E02-J3.json",
         "S02/S02E03-J1T0.json",
         "S02/S02E03-J1T1.json",
         "S02/S02E03-J1T2.json",
         "S02/S02E03-J1T3.json",
         "S02/S02E03-J2T0.json",
         "S02/S02E03-J2T1.json",
+        "S02/S02E03-J3.json",
+        "S02/S02E04-J1T0.json",
+        "S02/S02E04-J1T1.json",
+        "S02/S02E04-J2.json",
+        "S02/S02E04-J3.json",
+        "S02/S02E05-J1.json",
+        "S02/S02E05-J2.json",
+        "S02/S02E05-J3.json",
         "S02/S02E06-J1.json",
         "S02/S02E07-J1.json",
         "S02/S02E07-J2.json",
