Add E09 and E10 tracks

--- a/data/_Season02.json
+++ b/data/_Season02.json
@@ -24,6 +24,16 @@
         "S02/S02E07-J2.json",
         "S02/S02E07-J3.json",
         "S02/S02E08-J1.json",
-        "S02/S02E08-J2.json"
+        "S02/S02E08-J2.json",
+        "S02/S02E09-J1.json",
+        "S02/S02E09-J2.json",
+        "S02/S02E09-J3.json",
+        "S02/S02E09-J4.json",
+        "S02/S02E09-J5.json",
+        "S02/S02E10-J1.json",
+        "S02/S02E10-J2.json",
+        "S02/S02E10-J3.json",
+        "S02/S02E10-J4.json",
+        "S02/S02E10-J5.json"
     ]
 }
