--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 test:cargo:
   stage: test
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}-${CI_RUNNER_ID}"
+    paths:
+      - target/
   tags:
     - ipfs
     - linux
@@ -10,6 +14,10 @@ test:cargo:
 
 deploy_review:
   stage: deploy
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}-${CI_RUNNER_ID}"
+    paths:
+      - target/
   tags:
     - ipfs
     - linux
